收口后端编译层弃用接口