@@ -21,13 +21,13 @@ import datart.core.data.provider.Dataframe;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.hc.client5.http.classic.HttpClient;
 import org.apache.hc.client5.http.classic.methods.HttpDelete;
 import org.apache.hc.client5.http.classic.methods.HttpGet;
 import org.apache.hc.client5.http.classic.methods.HttpPost;
 import org.apache.hc.client5.http.classic.methods.HttpPut;
 import org.apache.hc.client5.http.classic.methods.HttpUriRequestBase;
 import org.apache.hc.client5.http.config.RequestConfig;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
 import org.apache.hc.client5.http.impl.classic.HttpClients;
 import org.apache.hc.core5.http.ClassicHttpResponse;
 import org.apache.hc.core5.http.ContentType;
@@ -48,7 +48,7 @@ import java.util.Map;
 @Slf4j
 public class HttpDataFetcher {
 
-    private static final HttpClient httpClient;
+    private static final CloseableHttpClient httpClient;
 
     private final HttpRequestParam param;
 
@@ -64,15 +64,13 @@ public class HttpDataFetcher {
 
         HttpUriRequestBase httpRequest = createHttpRequest(param);
 
-        ClassicHttpResponse response = (ClassicHttpResponse) httpClient.executeOpen(null, httpRequest, null);
-
         HttpResponseParser parser;
         try {
-            parser = param.getResponseParser().newInstance();
+            parser = param.getResponseParser().getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             parser = new ResponseJsonParser();
         }
-        try (response) {
+        try (ClassicHttpResponse response = httpClient.execute(httpRequest)) {
             return parser.parseResponse(param.getTargetPropertyName(), response, param.getColumns());
         }
 
